[tool.poetry]
name = "back-end-finance-app"
version = "0.1.0"
description = "Back end for the financial application."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
pydal = "^20231114.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
